@@ -108,6 +108,8 @@ Fl contains several widgets and other classes including:
 
 =item L<Fl::LightButton> - a button with a light to indicate 'on' vs 'off'
 
+=item L<Fl::ReturnButton>
+
 =item L<Fl::Chart>
 
 =item L<Fl::Group>
